--- a/boss.ini
+++ b/boss.ini
@@ -53,7 +53,7 @@ nogencheck = 1
 before_alert_ment = 입니다
 alert_ment = 입니다. 어여오세요
 
-bossname = 황혼1
+bossname = 황혼
 gentime = 24:00
 nogencheck = 1
 before_alert_ment = 입니다
