--- a/test_setting.ini
+++ b/test_setting.ini
@@ -1,6 +1,6 @@
 timezone = 9
 
-voicechannel = 
+voicechannel = 753863040746782790
 textchannel = 753862974619254835
 ladderchannel = 
 jungsanchannel = 
